@@ -1,3 +1,9 @@
+globus-gsi-sysconfig (8.0-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add cert and key checks based on different uid
+
+ -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 13:49:52 +0000
+
 globus-gsi-sysconfig (7.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Enable c99 compiler syntax
